# Mesin_training

./: CMakeLists.txt  README.md  demo.py  sample_data.py  training.py
bindings/: pybind_module.cpp
include/: activations.h  attention_layer.h  batch_norm_layer.h  bpe_tokenizer.h  dense_layer.h  embedding_layer.h  feed_forward_block.h  layer_base.h  layer_norm_tensor.h  losses.h  matrix_ops.h  neural_network.h  sequence_model.h  sequence_trainer.h  tensor3d.h  trainer.h  transformer_block.h
src/: activations.cpp  attention_layer.cpp  batch_norm_layer.cpp  bpe_tokenizer.cpp  dense_layer.cpp  embedding_layer.cpp  feed_forward_block.cpp  layer_norm_tensor.cpp  losses.cpp  matrix_ops.cpp  neural_network.cpp  sequence_model.cpp  sequence_trainer.cpp  tensor3d.cpp  trainer.cpp  transformer_block.cpp
